2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async):
	Update docstring.  Update error handling.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (create_file): Prevent exiting files
	from being overwritten.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (run_command): Improve
	command output handling with persistent buffer, environment
	variables, and proper output capture from start marker.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (grep): Update rg arguments.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Properly
	abort the tool call when the user rejects the edit.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	Keep buffer in run_command tool instead of killing it

	* site-lisp/gptel-config.el (run_command): Remove kill-buffer call
	when command succeeds to keep the buffer open for user inspection.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	Fix ediff quit hook handling in gptel-edit-file-async

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Replace
	'setq ediff-quit-hook' with 'add-hook' for proper hook
	management. Remove redundant run-at-time call for window
	configuration restoration. Simplify cleanup logic in ediff
	completion callback.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	Enhance grep tool with optional working directory parameter

	* site-lisp/gptel-config.el (grep): Add working_dir parameter for
	flexible directory searching. Update function signature and
	default-directory handling.
	(+gptel-edit-file-async): Improve error handling, use 'abort
	symbol instead of error lists. Add :direct t property to
	edit_file tool. Fix ediff cleanup hook to use run-at-time for
	proper window configuration restoration.
	(run_command): Improve command execution with comint-mode and
	proper working directory expansion. Add :direct t property to
	echo_message tool.

2025-09-05  Zhengyi Fu  <i@fuzy.me>
